# python-template

./: .pylintrc  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/app/: main.py
src/app/config/: config.py  logging_config.py
